# compliance_rag_Greek_EU_legislation

./: .dockerignore  .env.docker.example  .gitignore  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: backend-ci.yml  frontend-ci.yml
agent/: __init__.py  eurovoc.py  eurovoc_descriptors.json
agent/core/: __init__.py  actions.py  deps.py  factory.py  loop.py  prompts.py
agent/ingestion/: __init__.py  chunking.py  embeddings.py  loader.py
agent/retrieval/: __init__.py  reranker.py  search.py
agent/storage/: __init__.py  surreal.py
backend/: Dockerfile  deps.py  main.py  routes.py  schemas.py  streaming.py
evals/: ground_truth.py  judge.py  llm.py  runner.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/api/ask/: route.ts
frontend/components/: activity.tsx  ask-view.tsx  check-view.tsx  external-link.tsx  health-badge.tsx  result-card.tsx  search-view.tsx
frontend/lib/: celex.test.ts  celex.ts  sse.test.ts  sse.ts
mcp_server/: server.py
models/: __init__.py
tests/: test_agent.py  test_chunking.py  test_cli.py  test_config.py  test_embeddings.py  test_eurovoc.py  test_eval_ground_truth.py  test_eval_runner.py  test_ingestion.py  test_mcp_server.py  test_models.py  test_prompted_loop.py  test_reranker.py  test_retrieval.py  test_storage.py
tests/backend/: test_agent_endpoints.py  test_health.py  test_search.py  test_streaming.py
tests/integration/: test_storage_integration.py
(+5 files in other folders)
