[project]
name = "build-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.2",
    "fastapi>=0.139.0",
    "huggingface-hub>=1.21.0",
    "pydantic-ai>=2.2.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "surrealdb>=2.0.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "anyio>=4.14.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: requires a live SurrealDB instance reachable at SURREALDB_URL",
]
addopts = "-m 'not integration'"
